# pytynetl

./: .gitignore  .pylintrc  README.md  cov.xml  pyproject.toml  shell.py
cov_html/: index.html  pytynetl___init___py.html  pytynetl_exceptions_py.html  pytynetl_tasker_func_py.html  status.json
docs/source/: api.rst  conf.py  index.rst
pytynetl/: __init__.py  etl_dag.py  etl_daq.py  exceptions.py  tasker_func.py
tests/: test_etl_dag.py  test_etl_func.py  test_pytynetl.py
